# learning-pydantic-ai

./: .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  workspace.toml
.claude/: rules  skills
bases/learning_pydantic_ai/chapter_01/: __init__.py  core.py
bases/learning_pydantic_ai/chapter_02/: core.py
bases/learning_pydantic_ai/chapter_03/: __init__.py  core.py
bases/learning_pydantic_ai/chapter_04/: core.py
bases/learning_pydantic_ai/chapter_05/: core.py
bases/learning_pydantic_ai/chapter_06/: core.py
bases/learning_pydantic_ai/chapter_07/: __init__.py  core.py
bases/learning_pydantic_ai/chapter_08/: core.py
bases/learning_pydantic_ai/chapter_09/: core.py
bases/learning_pydantic_ai/chapter_10/: core.py  server.py
bases/learning_pydantic_ai/chapter_11/: core.py
components/learning_pydantic_ai/settings/: __init__.py  core.py
plans/: pydanticai-learning-plan.md
test/bases/learning_pydantic_ai/chapter_01/: test_core.py
test/bases/learning_pydantic_ai/chapter_02/: test_core.py
test/bases/learning_pydantic_ai/chapter_03/: test_core.py
test/bases/learning_pydantic_ai/chapter_04/: test_core.py
test/bases/learning_pydantic_ai/chapter_05/: test_core.py
test/bases/learning_pydantic_ai/chapter_06/: test_core.py
test/bases/learning_pydantic_ai/chapter_07/: test_core.py
test/bases/learning_pydantic_ai/chapter_08/: test_core.py
test/bases/learning_pydantic_ai/chapter_09/: test_core.py
test/bases/learning_pydantic_ai/chapter_10/: test_core.py
test/bases/learning_pydantic_ai/chapter_11/: test_core.py
test/components/learning_pydantic_ai/settings/: test_core.py
